# oidc-authn-sample

./: .gitignore  CLAUDE.md  Makefile  README.md
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/src/: config.py  main.py
apps/backend/src/middleware/: opa.py
apps/backend/src/routers/: documents.py  health.py
apps/backend/tests/: conftest.py  test_documents.py
apps/nginx/: Dockerfile
certs/: ca.crt  fullchain.crt  server.crt
charts/authzen/: Chart.yaml  values.yaml
charts/authzen/templates/backend/: deployment.yaml  service.yaml
charts/authzen/templates/keycloak/: cnpg-cluster.yaml  deployment.yaml  ingress.yaml  realm-configmap.yaml  service.yaml
charts/authzen/templates/nginx/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
charts/authzen/templates/oauth2proxy/: deployment.yaml  ingress.yaml  service.yaml
charts/authzen/templates/opa/: configmap.yaml  deployment.yaml  service.yaml
docs/: api-spec.yaml  authorization_2024-2026.md  pitfalls.md
infra/k8s/: minikube-setup.md
policies/opa/: authzen.rego
scripts/: deploy.sh  generate-certs.sh  reset-env.sh  test-e2e.sh  tunnel.ps1
